Bug 32339 - media/unsupported-tracks.html is failing on Snow Leopard Release bot
Summary: media/unsupported-tracks.html is failing on Snow Leopard Release bot
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Tools / Tests (show other bugs)
Version: 528+ (Nightly build)
Hardware: PC OS X 10.5
: P2 Normal
Assignee: Nobody
URL:
Keywords:
Depends on: 32270
Blocks: 33292 33434
  Show dependency treegraph
 
Reported: 2009-12-09 12:20 PST by Eric Seidel (no email)
Modified: 2010-01-09 15:24 PST (History)
7 users (show)

See Also:


Attachments
Patch (2.27 KB, patch)
2010-01-07 13:00 PST, Eric Seidel (no email)
no flags Details | Formatted Diff | Diff
Patch (1.25 KB, patch)
2010-01-08 02:31 PST, Eric Seidel (no email)
vestbo: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Eric Seidel (no email) 2009-12-09 12:20:10 PST
media/unsupported-tracks.html is failing on Snow Leopard Release bot

http://build.webkit.org/results/SnowLeopard%20Intel%20Release%20(Tests)/r51909%20(3081)/media/unsupported-tracks-pretty-diff.html

Seems to be an intermittent failure.
Comment 1 Nikolas Zimmermann 2009-12-09 14:08:08 PST
No, it's only failing, if you skip the one before. The whole set of media/ tests is flawed on the Snow Leopard bot. See my last commits to the Skipped file, it used to break in other tests, that I disabled, and the next one failed...
Comment 2 Eric Seidel (no email) 2009-12-29 11:06:18 PST
Failed again just now:
http://build.webkit.org/results/SnowLeopard%20Intel%20Release%20(Tests)/r52622%20(3725)/results.html
Comment 3 Eric Seidel (no email) 2010-01-06 20:23:57 PST
This failed again just now:
http://build.webkit.org/results/SnowLeopard%20Intel%20Release%20(Tests)/r52896%20(3950)/results.html
Comment 4 Eric Seidel (no email) 2010-01-06 20:30:31 PST
This seems to be the most common failure on the Snow Leopard bot.  It happened 4 times in the last 4 hours. :(
Comment 5 Eric Seidel (no email) 2010-01-06 21:51:23 PST
Actually this seems to fail every time.  Since we don't have a way to express an "expected timeout" I would argue we should consider just skipping this test for now so that the Snow Leopard Release bot can be green. :)

http://build.webkit.org/results/SnowLeopard%20Intel%20Release%20(Tests)/r52900%20(3954)/results.html
Comment 6 Eric Seidel (no email) 2010-01-07 12:45:44 PST
The message seems to be coming from the test before this one.  The test before is "media/restore-from-page-cache.html".  I suggest we try skipping that test and see if this failure goes away.

I unfortunately do no have a Snow Leopard machine on which to confirm if this works locally or not.
Comment 7 Eric Seidel (no email) 2010-01-07 13:00:14 PST
Created attachment 46078 [details]
Patch
Comment 8 Eric Seidel (no email) 2010-01-07 13:02:09 PST
I expect we will eventually see media/restore-from-page-cache.html timeout too if my theory is correct.
Comment 9 WebKit Review Bot 2010-01-07 13:04:22 PST
style-queue ran check-webkit-style on attachment 46078 [details] without any errors.
Comment 10 Nikolas Zimmermann 2010-01-07 16:30:05 PST
Comment on attachment 46078 [details]
Patch

LGTM, let's try it - r=me.
Comment 11 WebKit Commit Bot 2010-01-07 18:51:46 PST
Comment on attachment 46078 [details]
Patch

Clearing flags on attachment: 46078

Committed r52966: <http://trac.webkit.org/changeset/52966>
Comment 12 WebKit Commit Bot 2010-01-07 18:51:53 PST
All reviewed patches have been landed.  Closing bug.
Comment 14 Eric Seidel (no email) 2010-01-07 21:37:12 PST
Actually, looking at the diff again, the dump order between the notifyDone timout expiring and the test content is as-expected.

I think this test is actually timing out.

I think we should skip this test on Snow Leopard until someone with snow leopard and media knowledge can debug what's going on here.
Comment 15 Eric Seidel (no email) 2010-01-08 02:31:24 PST
Created attachment 46123 [details]
Patch
Comment 16 WebKit Review Bot 2010-01-08 02:35:21 PST
style-queue ran check-webkit-style on attachment 46123 [details] without any errors.
Comment 17 Eric Seidel (no email) 2010-01-08 03:23:48 PST
Committed r52982: <http://trac.webkit.org/changeset/52982>